istio/test-unauthorized-identity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unauthorized-test
  namespace: payments
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 100
    runAsGroup: 101
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: unauthorized-test
      image: curlimages/curl:8.8.0
      command: ["sleep", "3600"]
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop: ["ALL"]
